--- a/src/components/statistic/style.module.css
+++ b/src/components/statistic/style.module.css
@@ -10,13 +10,19 @@
 
 .btnStatistic {
   display: flex;
-  flex-direction: column;
+  gap: 60px;
   align-items: center;
-  margin-bottom: 20px; /* Додайте потрібний відступ між групами елементів */
+  margin-bottom: 40px; 
+  font-size: 20px;
+  color: rgb(173, 155, 192);
+  font-weight: 700;
 }
 
 .totalStatistics {
   display: flex;
-  flex-direction: column;
+  gap: 40px;
   align-items: center;
+  font-size: 20px;
+  color: rgb(176, 145, 209);
+  font-weight: 700;
 }
