--- a/src/components/section/style.module.css
+++ b/src/components/section/style.module.css
@@ -5,4 +5,5 @@
     font-weight: 700;
     font-family:Georgia, 'Times New Roman', Times, serif;
     margin-bottom: 45px;
+    margin-top: 60px;
 }
